syntax = "proto3";

// Require Go Package
option go_package = ".;models";

// Define Contact Type: Will be CSV in Future
message Contact {
  // Default
  string firstName = 1;
  string lastName = 2;
  string phone = 3;
  string website = 4;
  string email = 5;
  bytes picture = 6;
  string header = 7;
  repeated SocialTile socials = 8;

  // Extended Social Media Integration
  message SocialTile {
    // Properties
    string username = 1;
    bool isPrivate = 2;
    Provider provider = 3;
    Type type = 4;
    Links links = 5;
    Position position = 6; // 0-7

    // Social Links
    message Links {
      string userLink = 1;
      string feedLink = 2;
      string postLink = 3;
    }

    // Tile Display Position
    message Position {
      int32 row = 1;
      int32 column = 2;
      int32 size = 3;
      int32 location = 4;
    }

    // Enum for Provider
    enum Provider {
      Instagram = 0; // Feed/Link Option
      TikTok = 1;    // Feed/Link Option
      Facebook = 2;  // Link Only
      YouTube = 3;   // Feed/Link Option
      Spotify = 4;   // Feed/Link Option
      Medium = 5;    // Feed/Link Option
      Twitter = 6;   // Feed/Link Option
      Snapchat = 7;  // Feed/Link Option
      Github = 8;    // Feed/Link Option
    }

    // Social Tile Display Type
    enum Type {
      None = 0;
      Feed = 1;
      Post = 2;
      Link = 3;
    }
  }
}

// Define Device Type: Information about device
message Device {
  string id = 1;
  Platform platform = 2;
  string model = 3;
  string name = 4;
  string version = 5;
  int32 sdk = 6; // For Android
  bool desktop = 7;
}

// Define Directories Type: Where Data can be stored
message Directories {
  string cache = 1; // Only For Desktop
  string documents = 2;
  string downloads = 3;
  string temporary = 4;
}

// Define Peer: Basic Info Sent to Peers
message Peer {
  string id = 1;
  Device device = 2;
  Position position = 3;
  Profile profile = 4;
  Discovery discovery = 5;

  // Enum for Discovery Type
  enum Discovery {
    Linked = 0;
    MDNS = 1;
    Ultrasonic = 2;
    Rendevouz = 3;
  }
}

// Define Platform Enum: Operating System of Device
enum Platform {
  Unknown = 0;
  Android = 1;
  iOS = 2;
  MacOS = 3;
  Windows = 4;
  Linux = 5;
  Web = 6;
}

// Define Profile: General Information about Peer
message Profile {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  bytes picture = 4;
  Platform platform = 5;
}

// Define Direction: Includes All Direction Info
message Position {
  // Given Data
  double direction = 1;
  double antipodal = 2;
  double distance = 3;
  Heading heading = 4;
  Proximity proximity = 5;

  // Enum for Proximity from User
  enum Proximity {
    Unknown = 0;
    Immediate = 1;
    Near = 2;
    Distant = 3;
  }

  enum Heading {
    N = 0;
    NNE = 1;
    NE = 2;
    ENE = 3;
    E = 4;
    ESE = 5;
    SE = 6;
    SSE = 7;
    S = 8;
    SSW = 9;
    SW = 10;
    WSW = 11;
    W = 12;
    WNW = 13;
    NW = 14;
    NNW = 15;
  }
}

// Define User: Saved Data from Client
message User {
  Contact contact = 1;
  Device device = 2;
  Directories directories = 3;
  Profile profile = 4;
  repeated Settings settings = 5;

  message Settings {
    Option option = 1;
    Value value = 2;

    // Value of Settings Option
    message Value {
      bool enabled = 1;
      string value = 2;
    }

    // Enum for Settings Options
    enum Option {
      None = 0;
      DefaultVideoCall = 1;
      FallbackVideoCall = 2;
      DarkMode = 3;
      RunInBackground = 4;
    }
  }
}
